[project]
name = "comfyui-cascaderesolutions"
description = "Nodes:Cascade Resolutions"
version = "1.1.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/al-swaiti/ComfyUI-CascadeResolutions"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "abdallaalsw80"
DisplayName = "ComfyUI-CascadeResolutions"
Icon = ""
